{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 66,
  "lineage": "b906ee14-a74e-862e-5a47-d3bdd3dcf496",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08c6e937f2c29e0d3",
            "arn": "arn:aws:ec2:us-east-1:767398056657:elastic-ip/eipalloc-08c6e937f2c29e0d3",
            "domain": "vpc",
            "id": "eipalloc-08c6e937f2c29e0d3",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-100-28-247-142.compute-1.amazonaws.com",
            "public_ip": "100.28.247.142",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "staging-nat"
            },
            "tags_all": {
              "Name": "staging-nat"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398056657:internet-gateway/igw-0655e6b8309bbd5ab",
            "id": "igw-0655e6b8309bbd5ab",
            "owner_id": "767398056657",
            "tags": {
              "Name": "staging-igw"
            },
            "tags_all": {
              "Name": "staging-igw"
            },
            "vpc_id": "vpc-0fb699206b49230d4"
          },
          "dependencies": [
            "aws_vpc.ms"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08c6e937f2c29e0d3",
            "association_id": "eipassoc-0edb71c5bb86e3a3e",
            "connectivity_type": "public",
            "id": "nat-0cfb6dbe8b7ec387b",
            "network_interface_id": "eni-008a1207db9ae2ca1",
            "private_ip": "10.0.65.167",
            "public_ip": "100.28.247.142",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08b96f4ee8c57e019",
            "tags": {
              "Name": "staging-nat"
            },
            "tags_all": {
              "Name": "staging-nat"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_subnet.public_zone_1",
            "aws_vpc.ms"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398056657:route-table/rtb-05cfbf018690734ff",
            "id": "rtb-05cfbf018690734ff",
            "owner_id": "767398056657",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cfb6dbe8b7ec387b",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "staging-private"
            },
            "tags_all": {
              "Name": "staging-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb699206b49230d4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_subnet.public_zone_1",
            "aws_vpc.ms"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398056657:route-table/rtb-0b06cdc720e8e69e5",
            "id": "rtb-0b06cdc720e8e69e5",
            "owner_id": "767398056657",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0655e6b8309bbd5ab",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "staging-public"
            },
            "tags_all": {
              "Name": "staging-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fb699206b49230d4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.ms"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_zone1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0276e499a90a28e40",
            "route_table_id": "rtb-05cfbf018690734ff",
            "subnet_id": "subnet-0701d82df4ba83134"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_zone_1",
            "aws_subnet.public_zone_1",
            "aws_vpc.ms"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03789e0cd2e2c55c6",
            "route_table_id": "rtb-05cfbf018690734ff",
            "subnet_id": "subnet-046ee7783dfa1c069"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.gw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_zone_2",
            "aws_subnet.public_zone_1",
            "aws_vpc.ms"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_zone1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014fcc0a2034670df",
            "route_table_id": "rtb-0b06cdc720e8e69e5",
            "subnet_id": "subnet-08b96f4ee8c57e019"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public_zone_1",
            "aws_vpc.ms"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_zone2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-035b960837235da4e",
            "route_table_id": "rtb-0b06cdc720e8e69e5",
            "subnet_id": "subnet-065ab2cf8de1f5336"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public",
            "aws_subnet.public_zone_2",
            "aws_vpc.ms"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_zone_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398056657:subnet/subnet-0701d82df4ba83134",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0701d82df4ba83134",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398056657",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "staging-private-us-east-1a",
              "kubernetes.io/cluster/microservice": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "staging-private-us-east-1a",
              "kubernetes.io/cluster/microservice": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0fb699206b49230d4"
          },
          "dependencies": [
            "aws_vpc.ms"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_zone_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398056657:subnet/subnet-046ee7783dfa1c069",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046ee7783dfa1c069",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767398056657",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "staging-private-us-east-1b",
              "kubernetes.io/cluster/microservice": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "staging-private-us-east-1b",
              "kubernetes.io/cluster/microservice": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0fb699206b49230d4"
          },
          "dependencies": [
            "aws_vpc.ms"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_zone_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398056657:subnet/subnet-08b96f4ee8c57e019",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b96f4ee8c57e019",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767398056657",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "staging-public-us-east-1a",
              "kubernetes.io/cluster/microservice": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "staging-public-us-east-1a",
              "kubernetes.io/cluster/microservice": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0fb699206b49230d4"
          },
          "dependencies": [
            "aws_vpc.ms"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_zone_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398056657:subnet/subnet-065ab2cf8de1f5336",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-065ab2cf8de1f5336",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "767398056657",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "staging-public-us-east-1b",
              "kubernetes.io/cluster/microservice": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "staging-public-us-east-1b",
              "kubernetes.io/cluster/microservice": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0fb699206b49230d4"
          },
          "dependencies": [
            "aws_vpc.ms"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ms",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767398056657:vpc/vpc-0fb699206b49230d4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a063774d66e3f43a",
            "default_route_table_id": "rtb-0b145e750aafc1de0",
            "default_security_group_id": "sg-00720551fea9f597a",
            "dhcp_options_id": "dopt-058d8af3af0742a39",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fb699206b49230d4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b145e750aafc1de0",
            "owner_id": "767398056657",
            "tags": {
              "Name": "staging-main"
            },
            "tags_all": {
              "Name": "staging-main"
            }
          }
        }
      ]
    }
  ]
}